--- a/templates/pptt/detail.html.twig
+++ b/templates/pptt/detail.html.twig
@@ -1,16 +1,25 @@
-<table>
-    <tr>
-        <th>Plane Model</th>
-        <th>Flight Distance</th>
-        <th>Flight Duration</th>
-        <th>Participant</th>
-        <th>Date</th>
-    </tr>
-    <tr>
-        <td>{{ model }}</td>
-        <td>{{ distance }}</td>
-        <td>{{ duration }}</td>
-        <td>{{ partname }}</td>
-        <td>{{ date }}</td>
-    </tr>
-</table>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>PPTT</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
+            crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="{{ model.img }}" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title">Model: <strong>{{ model.model }}</strong></h5>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Flight Distance: {{ model.distance }}</li>
+        <li class="list-group-item">Flight Duration: {{ model.duration }}</li>
+        <li class="list-group-item">Participant: {{ model.partname }}</li>
+        <li class="list-group-item">Date: {{ model.date }}</li>
+    </ul>
+</div>
+</body>
+</html>
