--- a/templates/pptt/round.html.twig
+++ b/templates/pptt/round.html.twig
@@ -2,19 +2,43 @@
 <html>
 <head>
     <title>PPTT</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
+            crossorigin="anonymous"></script>
 </head>
 <body>
+<h5>
+    {% if lang == "en" %}
+        {% trans %}Runde wählen{% endtrans %}:
+    {% else %}
+        Runde wählen:
+    {% endif %}
+</h5>
+{% for i in 1..round|length %}
+    <a class="btn btn-dark" href="/results/{{ lang }}/{{ i }}" role="button">{{ i }}</a>
+{% endfor %}
+
 <table class="table table-striped">
     <thead class="thead-light">
-    <tr>
-        <th scope="col">Plane Model</th>
-        <th scope="col">Flight Distance</th>
-        <th scope="col">Flight Duration</th>
-        <th scope="col">Participant</th>
-        <th scope="col">Date</th>
-    </tr>
+    {% if lang == "en" %}
+        <tr>
+            <th scope="col">{% trans %}Modell{% endtrans %}</th>
+            <th scope="col">{% trans %}Flug Distanz{% endtrans %}</th>
+            <th scope="col">{% trans %}Flug Dauer{% endtrans %}</th>
+            <th scope="col">{% trans %}Teilnehmer{% endtrans %}</th>
+            <th scope="col">{% trans %}Datum{% endtrans %}</th>
+        </tr>
+    {% else %}
+        <tr>
+            <th scope="col">Modell</th>
+            <th scope="col">Flug Distanz</th>
+            <th scope="col">Flug Dauer</th>
+            <th scope="col">Teilnehmer</th>
+            <th scope="col">Datum</th>
+        </tr>
+    {% endif %}
     </thead>
     <tbody>
     {% for i in 1..round|length %}
@@ -25,11 +49,14 @@
             <td>{{ round[i].partname }}</td>
             <td>{{ round[i].date }}</td>
             <td>
-                <a href="{{ path('show_detail', {'id': i}) }}">info</a>
+                <a class="btn btn-info" href="{{ path('show_detail', {'lang': lang, 'roundId': roundId, 'id': i}) }}" role="button">info</a>
             </td>
         </tr>
     {% endfor %}
     </tbody>
 </table>
+
+<a class="btn btn-warning" href="/results/en/{{ roundId }}" role="button">en</a>
+<a class="btn btn-warning" href="/results/de/{{ roundId }}" role="button">de</a>
 </body>
 </html>
