--- a/templates/pptt/round.html.twig
+++ b/templates/pptt/round.html.twig
@@ -17,7 +17,7 @@
     {% endif %}
 </h5>
 {% for i in 1..round|length %}
-    <a class="btn btn-dark" href="/results/{{ lang }}/{{ i }}" role="button">{{ i }}</a>
+    <a class="btn btn-dark" href="{{ path('show_rounds', {'lang': lang, 'roundId': i}) }}" role="button">{{ i }}</a>
 {% endfor %}
 
 <table class="table table-striped">
@@ -56,7 +56,7 @@
     </tbody>
 </table>
 
-<a class="btn btn-warning" href="/results/en/{{ roundId }}" role="button">en</a>
-<a class="btn btn-warning" href="/results/de/{{ roundId }}" role="button">de</a>
+<a class="btn btn-warning" href="{{ path('show_rounds', {'lang': 'en', 'roundId': roundId}) }}" role="button">en</a>
+<a class="btn btn-warning" href="{{ path('show_rounds', {'lang': 'de', 'roundId': roundId}) }}" role="button">de</a>
 </body>
 </html>
