--- a/templates/pptt/detail.html.twig
+++ b/templates/pptt/detail.html.twig
@@ -7,43 +7,52 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
             crossorigin="anonymous"></script>
+    <link href="/styles/style.css" rel="stylesheet">
 </head>
-<body>
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="{{ model.img }}" alt="Card image cap">
-    <div class="card-body">
-        <h5 class="card-title">
+<body class="d-flex justify-content-center">
+<section>
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="{{ model.img }}" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">
+                {% if lang == "en" %}
+                    {% trans %}Modell{% endtrans %}:
+                {% else %}
+                    Modell:
+                {% endif %}
+                <strong>{{ model.model }}</strong></h5>
+        </div>
+        <ul class="list-group list-group-flush">
             {% if lang == "en" %}
-                {% trans %}Modell{% endtrans %}:
+                <li class="list-group-item">{% trans %}Flug Distanz{% endtrans %}: {{ model.distance }}</li>
+                <li class="list-group-item">{% trans %}Flug Dauer{% endtrans %}: {{ model.duration }}</li>
+                <li class="list-group-item">{% trans %}Teilnehmer{% endtrans %}: {{ model.partname }}</li>
+                <li class="list-group-item">{% trans %}Datum{% endtrans %}: {{ model.date }}</li>
             {% else %}
-                Modell:
+                <li class="list-group-item">Flug Distanz: {{ model.distance }}</li>
+                <li class="list-group-item">Flug Dauer: {{ model.duration }}</li>
+                <li class="list-group-item">Teilnehmer: {{ model.partname }}</li>
+                <li class="list-group-item">Datum: {{ model.date }}</li>
             {% endif %}
-            <strong>{{ model.model }}</strong></h5>
+        </ul>
     </div>
-    <ul class="list-group list-group-flush">
-        {% if lang == "en" %}
-            <li class="list-group-item">{% trans %}Flug Distanz{% endtrans %}: {{ model.distance }}</li>
-            <li class="list-group-item">{% trans %}Flug Dauer{% endtrans %}: {{ model.duration }}</li>
-            <li class="list-group-item">{% trans %}Teilnehmer{% endtrans %}: {{ model.partname }}</li>
-            <li class="list-group-item">{% trans %}Datum{% endtrans %}: {{ model.date }}</li>
-        {% else %}
-            <li class="list-group-item">Flug Distanz: {{ model.distance }}</li>
-            <li class="list-group-item">Flug Dauer: {{ model.duration }}</li>
-            <li class="list-group-item">Teilnehmer: {{ model.partname }}</li>
-            <li class="list-group-item">Datum: {{ model.date }}</li>
-        {% endif %}
-    </ul>
-</div>
 
-<a class="btn btn-secondary" href="{{ path('show_rounds', {'lang': lang, 'roundId': roundId}) }}" role="button">
-    {% if lang == "en" %}
-        {% trans %}Zurück{% endtrans %}
-    {% else %}
-        Zurück
-    {% endif %}
-</a>
+    <div id="buttons" class="d-flex flex-direction-row justify-content-between">
+        <a class="btn btn-secondary" href="{{ path('show_rounds', {'lang': lang, 'roundId': roundId}) }}" role="button">
+            {% if lang == "en" %}
+                {% trans %}Zurück{% endtrans %}
+            {% else %}
+                Zurück
+            {% endif %}
+        </a>
 
-<a class="btn btn-warning" href="{{ path('show_detail', {'lang': 'en', 'roundId': roundId, 'id': id}) }}" role="button">en</a>
-<a class="btn btn-warning" href="{{ path('show_detail', {'lang': 'de', 'roundId': roundId, 'id': id}) }}" role="button">de</a>
+        <div>
+            <a class="btn btn-warning" href="{{ path('show_detail', {'lang': 'en', 'roundId': roundId, 'id': id}) }}"
+               role="button">en</a>
+            <a class="btn btn-warning" href="{{ path('show_detail', {'lang': 'de', 'roundId': roundId, 'id': id}) }}"
+               role="button">de</a>
+        </div>
+    </div>
+</section>
 </body>
 </html>
