--- a/templates/pptt/overview.html.twig
+++ b/templates/pptt/overview.html.twig
@@ -7,34 +7,42 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
             crossorigin="anonymous"></script>
+    <link href="/styles/style.css" rel="stylesheet">
+    <link href="/styles/overview.css" rel="stylesheet">
 </head>
 <body>
 {% for i in 0..rounds|length-1 %}
-    <h3>Runde {{ i+1 }}:</h3>
-    <table class="table table-striped">
-        <thead class="thead-light">
-        <tr>
-            <th scope="col">Modell</th>
-            <th scope="col">Flug Distanz</th>
-            <th scope="col">Flug Dauer</th>
-            <th scope="col">Teilnehmer</th>
-            <th scope="col">Datum</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for s in 1..rounds|length %}
-            <tr>
-                <td>{{ rounds[i][s].model }}</td>
-                <td>{{ rounds[i][s].distance }}</td>
-                <td>{{ rounds[i][s].duration }}</td>
-                <td>{{ rounds[i][s].partname }}</td>
-                <td>{{ rounds[i][s].date }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="card">
+        <div class="card-body">
+            <h3 class="card-title">Runde {{ i+1 }}:</h3>
+            <table class="table table-striped card-text">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">Modell</th>
+                    <th scope="col">Flug Distanz</th>
+                    <th scope="col">Flug Dauer</th>
+                    <th scope="col">Teilnehmer</th>
+                    <th scope="col">Datum</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for s in 1..rounds|length %}
+                    <tr>
+                        <td>{{ rounds[i][s].model }}</td>
+                        <td>{{ rounds[i][s].distance }}</td>
+                        <td>{{ rounds[i][s].duration }}</td>
+                        <td>{{ rounds[i][s].partname }}</td>
+                        <td>{{ rounds[i][s].date }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endfor %}
 
-<a class="btn btn-secondary" href="{{ path('show_rounds', {'lang': 'de', 'roundId': 1}) }}" role="button">Runden anzeigen</a>
+<a id="showRounds" class="btn btn-secondary" href="{{ path('show_rounds', {'lang': 'de', 'roundId': 1}) }}"
+   role="button">Runden
+    anzeigen</a>
 </body>
 </html>
