--- a/templates/pptt/round.html.twig
+++ b/templates/pptt/round.html.twig
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
             crossorigin="anonymous"></script>
+    <link href="/styles/style.css" rel="stylesheet">
 </head>
 <body>
 <h5>
@@ -49,22 +50,33 @@
             <td>{{ round[i].partname }}</td>
             <td>{{ round[i].date }}</td>
             <td>
-                <a class="btn btn-info" href="{{ path('show_detail', {'lang': lang, 'roundId': roundId, 'id': i}) }}" role="button">info</a>
+                <a class="btn btn-info" href="{{ path('show_detail', {'lang': lang, 'roundId': roundId, 'id': i}) }}"
+                   role="button">info</a>
             </td>
         </tr>
     {% endfor %}
     </tbody>
 </table>
 
-<a class="btn btn-secondary" href="{{ path('show_overview') }}" role="button">
-    {% if lang == "en" %}
-        {% trans %}Überblick{% endtrans %}
-    {% else %}
-        Überblick
-    {% endif %}
-</a>
+<div id="buttons" class="d-flex flex-direction-row justify-content-between">
+    <a class="btn btn-secondary" href="{{ path('show_overview') }}" role="button">
+        {% if lang == "en" %}
+            {% trans %}Überblick{% endtrans %}
+        {% else %}
+            Überblick
+        {% endif %}
+    </a>
 
-<a class="btn btn-warning" href="{{ path('show_rounds', {'lang': 'en', 'roundId': roundId}) }}" role="button">en</a>
-<a class="btn btn-warning" href="{{ path('show_rounds', {'lang': 'de', 'roundId': roundId}) }}" role="button">de</a>
+    <div>
+        <a class="btn btn-warning" href="{{ path('show_rounds', {'lang': 'en', 'roundId': roundId}) }}"
+           role="button">en</a>
+        <a class="btn btn-warning" href="{{ path('show_rounds', {'lang': 'de', 'roundId': roundId}) }}"
+           role="button">de</a>
+    </div>
+</div>
+
+<div class="d-flex justify-content-center">
+    <img id="paperplane" src="/img/paper-airplane.png">
+</div>
 </body>
 </html>
